index.html meta태그 수정 style.css 반응형 가로 스크롤 제거

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <script src="https://kit.fontawesome.com/e6fc4ff6aa.js" crossorigin="anonymous"></script>
@@ -15,9 +17,10 @@
 <body>
     <div class="main container fixed-top">
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <a class="navbar-brand" href="#">포트폴리오</a>
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -52,10 +55,10 @@
                 <div class="section-sub">
                     <div class="section-social">
                         <span>
-                <button class="btn-like">
-                  <i class="far fa-heart fa-lg"></i>
-                </button>
-              </span>
+                            <button class="btn-like">
+                                <i class="far fa-heart fa-lg"></i>
+                            </button>
+                        </span>
                     </div>
                     <div class="section-like-count">
                         좋아요 112개
@@ -75,7 +78,8 @@
                     <li>1994.04.08</li>
                     <li>2010.03 - 2013.02 인덕공업고등학교</li>
                     <li>2014.03 - 2015.12 군대</li>
-                    <li>2017.03 - 2020.02 <a href="http://www.dongyang.ac.kr/web/www" target="_blank">동양미래대학교</a> - 컴퓨터정보공학과
+                    <li>2017.03 - 2020.02 <a href="http://www.dongyang.ac.kr/web/www" target="_blank">동양미래대학교</a> -
+                        컴퓨터정보공학과
                     </li>
                 </ul>
                 <p>
@@ -106,13 +110,15 @@
                 </ul>
                 <div><a href="http://dfgg.kr" target="_blank">DFGG 프로젝트</a></div><br>
                 <div>
-                    <a href="https://github.com/koreas9408" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-lg"></i>깃허브</a>
+                    <a href="https://github.com/koreas9408" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-github fa-lg"></i>깃허브</a>
                 </div>
                 <div class="email"><i class="fas fa-envelope fa-lg"></i>koreas9408@gmail.com</div>
             </div>
         </div>
     </div>
-    <div id="skill" class="content-skill container" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
+    <div id="skill" class="content-skill container" data-aos="fade-up" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="2000">
         <div class="container">
             <div class="section">
                 <h2>Skill</h2>
@@ -137,10 +143,10 @@
                     <div class="section-sub">
                         <div class="section-social">
                             <span>
-                  <button class="btn-like">
-                    <i class="like far fa-heart fa-lg"></i>
-                  </button>
-                    </span>
+                                <button class="btn-like">
+                                    <i class="like far fa-heart fa-lg"></i>
+                                </button>
+                            </span>
                         </div>
                         <div class="section-like-count">
                             좋아요 112개
@@ -165,10 +171,10 @@
                     <div class="section-sub">
                         <div class="section-social">
                             <span>
-                          <button class="btn-like">
-                            <i class="like far fa-heart fa-lg"></i>
-                          </button>
-                        </span>
+                                <button class="btn-like">
+                                    <i class="like far fa-heart fa-lg"></i>
+                                </button>
+                            </span>
                         </div>
                         <div class="section-like-count">
                             좋아요 112개
@@ -195,10 +201,10 @@
                     <div class="section-sub">
                         <div class="section-social">
                             <span>
-                          <button class="btn-like">
-                            <i class="like far fa-heart fa-lg"></i>
-                          </button>
-                    </span>
+                                <button class="btn-like">
+                                    <i class="like far fa-heart fa-lg"></i>
+                                </button>
+                            </span>
                         </div>
                         <div class="section-like-count">
                             좋아요 112개
@@ -207,130 +213,140 @@
                             <span>#프레임워크 #Framework #SpringLegucy #Springboot #Django</span>
                         </div>
                 </article>
-                </div>
-                </div>
-                </div>
-                <div id="project" class="content-project container" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
-                    <div class="container">
-                        <h2>Project</h2>
-                        <div class="section">
-                            <article>
-                                <header>
-                                    <div class="profile">
-                                        <img src="./profile.jpeg" alt="" srcset="" />
-                                    </div>
-                                    <div class="section-username">임승현</div>
-                                </header>
-                                <div class="section-content">
-                                    <div class="section-img">
-                                        <img src="./images/project_01.png" alt="" srcset="" />
-                                    </div>
-                                </div>
-                                <div class="section-sub">
-                                    <div class="section-social">
-                                        <span>
-              <button class="btn-like">
-                <i class="like far fa-heart fa-lg"></i>
-              </button>
-              <a href="https://github.com/koreas9408/dfgg" target="_blank"><i class="fab fa-github fa-lg"></i></a>
-                    </span>
-                                    </div>
-                                    <div class="section-like-count">
-                                        좋아요 112개
-                                    </div>
-                                    <div class="section-sub-content">
-                                        <span>#Springboot2 #Java8 #Maven #Lombok #Spring-security
-              #Spring-RestTemplete #Jquery(AJAX) #NeopleOpenAPI #GoogleOAuth
-              #AWS-EC2 #AWS-RDS #MariaDB #AWS-Route #Bootstrap4</span>
-                                    </div>
-                                </div>
-                            </article>
-                            <article>
-                                <header>
-                                    <div class="profile">
-                                        <img src="./profile.jpeg" alt="" srcset="" />
-                                    </div>
-                                    <div class="section-username">임승현</div>
-                                </header>
-                                <div class="section-content">
-                                    <div class="section-img">
-                                        <img src="./images/project_02.png" alt="" srcset="" />
-                                    </div>
-                                </div>
-                                <div class="section-sub">
-                                    <div class="section-social">
-                                        <span>
-              <button class="btn-like">
-                <i class="like far fa-heart fa-lg"></i>
-              </button>
-              <a href="https://github.com/koreas9408/vanlia-js" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-lg"></i></a>
-            </span>
-                                    </div>
-                                    <div class="section-like-count">
-                                        좋아요 112개
-                                    </div>
-                                    <div class="section-sub-content">
-                                        <span>#바닐라자바스크립트 #TodoApp #LocalStorage #함수형언어
-              #JSON.parse #노마드코더
-            </span>
-                                    </div>
-                                </div>
-                            </article>
-                            <article>
-                                <header>
-                                    <div class="profile">
-                                        <img src="./profile.jpeg" alt="" srcset="" />
-                                    </div>
-                                    <div class="section-username">임승현</div>
-                                </header>
-                                <div class="section-content">
-                                    <div class="section-img">
-                                        <img src="./images/project_03.png" alt="" srcset="" />
-                                    </div>
-                                </div>
-                                <div class="section-sub">
-                                    <div class="section-social">
-                                        <span>
-              <button class="btn-like">
-                <i class="like far fa-heart fa-lg"></i>
-              </button>
-              <a href="https://github.com/koreas9408/airbnb-clone" target="_blank"><i class="fab fa-github fa-lg"></i></a>
-            </span>
-                                    </div>
-                                    <div class="section-like-count">
-                                        좋아요 112개
-                                    </div>
-                                    <div class="section-sub-content">
-                                        <span>#Django #DjangoAdmin #DjangoTemplete #TailwindCSS #Airbnb
-              #클론코딩</span>
-                                    </div>
-                                </div>
-                            </article>
+            </div>
+        </div>
+    </div>
+    <div id="project" class="content-project container" data-aos="fade-up" data-aos-anchor-placement="top-bottom"
+        data-aos-duration="2000">
+        <div class="container">
+            <h2>Project</h2>
+            <div class="section">
+                <article>
+                    <header>
+                        <div class="profile">
+                            <img src="./profile.jpeg" alt="" srcset="" />
+                        </div>
+                        <div class="section-username">임승현</div>
+                    </header>
+                    <div class="section-content">
+                        <div class="section-img">
+                            <img src="./images/project_01.png" alt="" srcset="" />
                         </div>
                     </div>
-                    <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
-                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
-                    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-                    <script>
-                        AOS.init();
-                    </script>
-                    <script>
-                        $(function() {
-                            var btnLike = $(this);
-                            var heart = $(".like");
-                            btnLike.click(function() {
-                                if (heart.hasClass("far")) {
-                                    heart.removeClass("far");
-                                    heart.addClass("fas");
-                                } else {
-                                    heart.removeClass("fas");
-                                    heart.addClass("far");
-                                }
-                            });
+                    <div class="section-sub">
+                        <div class="section-social">
+                            <span>
+                                <button class="btn-like">
+                                    <i class="like far fa-heart fa-lg"></i>
+                                </button>
+                                <a href="https://github.com/koreas9408/dfgg" target="_blank"><i
+                                        class="fab fa-github fa-lg"></i></a>
+                            </span>
+                        </div>
+                        <div class="section-like-count">
+                            좋아요 112개
+                        </div>
+                        <div class="section-sub-content">
+                            <span>#Springboot2 #Java8 #Maven #Lombok #Spring-security
+                                #Spring-RestTemplete #Jquery(AJAX) #NeopleOpenAPI #GoogleOAuth
+                                #AWS-EC2 #AWS-RDS #MariaDB #AWS-Route #Bootstrap4</span>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <header>
+                        <div class="profile">
+                            <img src="./profile.jpeg" alt="" srcset="" />
+                        </div>
+                        <div class="section-username">임승현</div>
+                    </header>
+                    <div class="section-content">
+                        <div class="section-img">
+                            <img src="./images/project_02.png" alt="" srcset="" />
+                        </div>
+                    </div>
+                    <div class="section-sub">
+                        <div class="section-social">
+                            <span>
+                                <button class="btn-like">
+                                    <i class="like far fa-heart fa-lg"></i>
+                                </button>
+                                <a href="https://github.com/koreas9408/vanlia-js" target="_blank"
+                                    rel="noopener noreferrer"><i class="fab fa-github fa-lg"></i></a>
+                            </span>
+                        </div>
+                        <div class="section-like-count">
+                            좋아요 112개
+                        </div>
+                        <div class="section-sub-content">
+                            <span>#바닐라자바스크립트 #TodoApp #LocalStorage #함수형언어
+                                #JSON.parse #노마드코더
+                            </span>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <header>
+                        <div class="profile">
+                            <img src="./profile.jpeg" alt="" srcset="" />
+                        </div>
+                        <div class="section-username">임승현</div>
+                    </header>
+                    <div class="section-content">
+                        <div class="section-img">
+                            <img src="./images/project_03.png" alt="" srcset="" />
+                        </div>
+                    </div>
+                    <div class="section-sub">
+                        <div class="section-social">
+                            <span>
+                                <button class="btn-like">
+                                    <i class="like far fa-heart fa-lg"></i>
+                                </button>
+                                <a href="https://github.com/koreas9408/airbnb-clone" target="_blank"><i
+                                        class="fab fa-github fa-lg"></i></a>
+                            </span>
+                        </div>
+                        <div class="section-like-count">
+                            좋아요 112개
+                        </div>
+                        <div class="section-sub-content">
+                            <span>#Django #DjangoAdmin #DjangoTemplete #TailwindCSS #Airbnb
+                                #클론코딩</span>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </div>
+        <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js "
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo "
+            crossorigin="anonymous "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 "
+            crossorigin="anonymous "></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM "
+            crossorigin="anonymous "></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
+        <script>
+            $(function () {
+                var btnLike = $(this);
+                var heart = $(".like");
+                btnLike.click(function () {
+                    if (heart.hasClass("far")) {
+                        heart.removeClass("far");
+                        heart.addClass("fas");
+                    } else {
+                        heart.removeClass("fas");
+                        heart.addClass("far");
+                    }
+                });
 
-                        });
-                    </script>
+            });
+        </script>
 
 
 </body>
