--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="navbar-brand" href="#">포트폴리오</a>
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#profile">프로필</a>
+                        <a class="nav-link" href="#profile">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#skill">Skill</a>
@@ -48,7 +48,7 @@
     </div>
 
     <div id="profile" class="content-profile container">
-        <div class="section container" data-aos="fade-right" data-aos-offset="300" data-aos-duration="2000">
+        <div class="section container" data-aos="fade-right" data-aos-duration="2000">
             <article>
                 <header>
                     <div class="profile">
@@ -78,7 +78,7 @@
                 </div>
             </article>
         </div>
-        <div class="my-profile" data-aos="fade-left" data-aos-offset="300" data-aos-duration="2000">
+        <div class="my-profile" data-aos="fade-left" data-aos-duration="2000">
             <div class="name">
                 <p>임승현☺️</p>
             </div>
@@ -327,37 +327,62 @@
                 </article>
             </div>
         </div>
-        <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js "
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo "
-            crossorigin="anonymous "></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 "
-            crossorigin="anonymous "></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM "
-            crossorigin="anonymous "></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
-        <script>
-            $(function () {
-                var btnLike = $(this);
-                var heart = $(".like");
-                btnLike.click(function () {
-                    if (heart.hasClass("far")) {
-                        heart.removeClass("far");
-                        heart.addClass("fas");
-                    } else {
-                        heart.removeClass("fas");
-                        heart.addClass("far");
-                    }
-                });
-
+    </div>
+    <div id="disqus_thread" class="container"></div>
+    <footer class="container">
+        All Rights Reserved. Copyrightⓒ LimSeungHyun
+    </footer>
+    <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js "
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo "
+        crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 "
+        crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM "
+        crossorigin="anonymous "></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script>
+        $(function () {
+            var btnLike = $(this);
+            var heart = $(".like");
+            btnLike.click(function () {
+                if (heart.hasClass("far")) {
+                    heart.removeClass("far");
+                    heart.addClass("fas");
+                } else {
+                    heart.removeClass("fas");
+                    heart.addClass("far");
+                }
             });
-        </script>
 
+        });
+    </script>
+    <div id="disqus_thread" class="container"></div>
+    <script>
 
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://http-localhost-5500.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript>
+    <script id="dsq-count-scr" src="//http-localhost-5500.disqus.com/count.js" async></script>
 </body>
 
 </html>
